# wiki

./: CNAME  README.html  README.md  conf.py  genindex.html  index.html  index.md  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: publish.yml
_sources/: index.md.txt
_sources/abit/: index.md.txt
_sources/council/: community.md.txt  index.md.txt
_sources/freshmen/: index.md.txt
_static/: documentation_options.js  styles.css
_templates/: watermark.html
_templates/sections/: footer-content.html
abit/: 113.html  121.html  123.html  a.html  b.html  index.html  index.md
council/: community.html  index.html
freshmen/: index.html  index.md
wiki/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
wiki/_sources/: README.md.txt
wiki/_sources/abit/: 113.md.txt  121.md.txt  123.md.txt  index.md.txt
wiki/_sources/council/: community.md.txt  index.md.txt
wiki/_sources/freshmen/: index.md.txt  stipykha.md.txt  vidpustka.md.txt
wiki/abit/: 113.html  121.html  123.html  index.html
wiki/council/: community.html  index.html
wiki/freshmen/: index.html  stipykha.html  vidpustka.html
